--- a/application/templates/tarot_last_round.html
+++ b/application/templates/tarot_last_round.html
@@ -19,7 +19,7 @@
                 {% for card in deal_cards %}
                 <div class="col d-flex justify-content-center">
                     <a class="tarot-card fill d-flex align-items-center"
-                       href="{{ url_for('tarot_end', first_num=first_num, second_num=second_num, third_num=card['number']) }}">
+                       href="{{ url_for('app_routes.tarot_end', first_num=first_num, second_num=second_num, third_num=card['number']) }}">
                         <img src="/static/images/bg/shotaro-hamasaki-8FU_MZ2r0EQ-unsplash.jpg" class="fill" alt="...">
                         <img src="{{ card['img'] }}" class="fill" alt="{{ card['name'] }}">
                     </a>
