put all the routes into the init file

--- a/application/templates/datascience_boxoffice.html
+++ b/application/templates/datascience_boxoffice.html
@@ -1286,70 +1286,70 @@
         var config = {responsive: true, displayModeBar: true};
         Plotly.setPlotConfig(config);
 
-        var chart1 = {{ get_chart_for("Wonder Woman 1984") | safe }};
+        var chart1 = {{ get_chart_for("Wonder Woman 1984", table) | safe }};
         Plotly.newPlot("chart1", chart1, {});
 
-        var chart2 = {{ get_chart_for("Godzilla vs. Kong") | safe }};
+        var chart2 = {{ get_chart_for("Godzilla vs. Kong", table) | safe }};
         Plotly.newPlot("chart2", chart2, {});
 
-        var chart3 = {{ get_chart_for("Mortal Kombat") | safe }};
+        var chart3 = {{ get_chart_for("Mortal Kombat", table,) | safe }};
         Plotly.newPlot("chart3", chart3, {});
 
-        var chart4 = {{ get_chart_for("The Conjuring: The Devil Made Me Do It") | safe }};
+        var chart4 = {{ get_chart_for("The Conjuring: The Devil Made Me Do It", table) | safe }};
         Plotly.newPlot("chart4", chart4, {});
 
-        var chart5 = {{ get_chart_for("In The Heights") | safe }};
+        var chart5 = {{ get_chart_for("In The Heights", table) | safe }};
         Plotly.newPlot("chart5", chart5, {});
 
-        var chart6 = {{ get_chart_for("Space Jam: A New Legacy") | safe }};
+        var chart6 = {{ get_chart_for("Space Jam: A New Legacy", table) | safe }};
         Plotly.newPlot("chart6", chart6, {});
 
-        var chart7 = {{ get_chart_for("The Suicide Squad") | safe }};
+        var chart7 = {{ get_chart_for("The Suicide Squad", table) | safe }};
         Plotly.newPlot("chart7", chart7, {});
 
-        var chart8 = {{ get_chart_for("Malignant") | safe }};
+        var chart8 = {{ get_chart_for("Malignant", table) | safe }};
         Plotly.newPlot("chart8", chart8, {});
 
-        var chart9 = {{ get_chart_for("Dune") | safe }};
+        var chart9 = {{ get_chart_for("Dune", table) | safe }};
         Plotly.newPlot("chart9", chart9, {});
 
-        var chart10 = {{ get_chart_for("The Matrix Resurrections") | safe }};
+        var chart10 = {{ get_chart_for("The Matrix Resurrections", table) | safe }};
         Plotly.newPlot("chart10", chart10, {});
 
-        var chart11 = {{ get_chart_for("Jungle Cruise") | safe }};
+        var chart11 = {{ get_chart_for("Jungle Cruise", table) | safe }};
         Plotly.newPlot("chart11", chart11, {});
 
-        var chart12 = {{ get_chart_for("Cruella") | safe }};
+        var chart12 = {{ get_chart_for("Cruella", table) | safe }};
         Plotly.newPlot("chart12", chart12, {});
 
-        var chart13 = {{ get_chart_for("Black Widow") | safe }};
+        var chart13 = {{ get_chart_for("Black Widow", table) | safe }};
         Plotly.newPlot("chart13", chart13, {});
 
-        var chart14 = {{ get_chart_for("Spider-Man: No Way Home") | safe }};
+        var chart14 = {{ get_chart_for("Spider-Man: No Way Home", table) | safe }};
         Plotly.newPlot("chart14", chart14, {});
 
-        var chart15 = {{ get_chart_for("Shang-Chi and the Legend of the Ten Rings") | safe }};
+        var chart15 = {{ get_chart_for("Shang-Chi and the Legend of the Ten Rings", table) | safe }};
         Plotly.newPlot("chart15", chart15, {});
 
-        var chart16 = {{ get_chart_for("Venom: Let There Be Carnage") | safe }};
+        var chart16 = {{ get_chart_for("Venom: Let There Be Carnage", table) | safe }};
         Plotly.newPlot("chart16", chart16, {});
 
-        var chart17 = {{ get_chart_for("F9: The Fast Saga") | safe }};
+        var chart17 = {{ get_chart_for("F9: The Fast Saga", table) | safe }};
         Plotly.newPlot("chart17", chart17, {});
 
-        var chart18 = {{ get_chart_for("Eternals") | safe }};
+        var chart18 = {{ get_chart_for("Eternals", table) | safe }};
         Plotly.newPlot("chart18", chart18, {});
 
-        var chart19 = {{ get_chart_for("No Time to Die") | safe }};
+        var chart19 = {{ get_chart_for("No Time to Die", table) | safe }};
         Plotly.newPlot("chart19", chart19, {});
 
-        var chart20 = {{ get_chart_for("A Quiet Place Part II") | safe }};
+        var chart20 = {{ get_chart_for("A Quiet Place Part II", table) | safe }};
         Plotly.newPlot("chart20", chart20, {});
 
-        var chart21 = {{ get_chart_for("Ghostbusters: Afterlife") | safe }};
+        var chart21 = {{ get_chart_for("Ghostbusters: Afterlife", table) | safe }};
         Plotly.newPlot("chart21", chart21, {});
 
-        var chart22 = {{ get_chart_for("Free Guy") | safe }};
+        var chart22 = {{ get_chart_for("Free Guy", table) | safe }};
         Plotly.newPlot("chart22", chart22, {});
 
     </script>
